--- a/codersquare.BL/codersquare.BL.csproj
+++ b/codersquare.BL/codersquare.BL.csproj
@@ -18,4 +18,10 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Manager\Comment\" />
+      <Folder Include="Manager\Like\" />
+      <Folder Include="Manager\User\" />
+    </ItemGroup>
+
 </Project>
