Finished user Authentication and Authorization

--- a/codersquare/appsettings.json
+++ b/codersquare/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "http://localhost:5220",
+    "Audience": "http://localhost:5220",
+    "SigningKey": "VerrrryyyylongggggggggSuperSecretKey123!"
+  },
   
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=codersquare.db"
